--- a/src/components/Section/section.css
+++ b/src/components/Section/section.css
@@ -14,3 +14,14 @@
     padding: 10px 32px;
     width: 100%;
 }
+.section-header{
+    display: flex;
+    justify-content: space-between;
+}
+
+.section-toggle-btn{
+    font-size: 20px;
+    font-weight: 600;
+    color: var(--css-primary);
+    cursor: pointer;
+}
